k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp
  namespace: otus-project-app
spec:
  type: ClusterIP
  selector:
    app: otus-project-app
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
